--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <button onclick="verificarIntento();" 
                     class="container__boton">Intentar</button>
                     <!-- verificarIntento es una función que se ejecuta al hacer click en el botón Intentar, esta función verifica si el número ingresado por el usuario es correcto. -->
-                    <button class="container__boton" id="reiniciar" disabled>Nuevo juego</button>
+                    <button onclick = "reiniciarJuego()" class="container__boton" id="reiniciar" disabled>Nuevo juego</button>
                 </div>
             </div>
             <img src="./img/ia.png" alt="Una persona mirando a la izquierda" class="container__imagen-persona" />
